Address code review comments with documentation and error handling
Co-authored-by: PoppyBlossom <145932207+PoppyBlossom@users.noreply.github.com>